<resources>

    <string name="app_name">Folclore Online</string>


    <!-- NAVIGATION DRAWER -->
    <string name="navigation_drawer_open">Abrir menu de navegação</string>
    <string name="navigation_drawer_close">Fechar menu de navegação</string>
    <string name="nav_user_avatar">Logotipo do utilizador</string>
    <string name="nav_public_username">Público</string>
    <string name="nav_news">Notícias</string>
    <string name="nav_events">Eventos</string>
    <string name="nav_partners">Parcerias</string>
    <string name="nav_groups">Grupos</string>
    <string name="nav_no_group_selected">NENHUM GRUPO SELECIONADO</string>
    <string name="nav_group_details">Detalhes</string>
    <string name="nav_group_history">Historial</string>
    <string name="nav_group_staff">Corpos gerentes</string>
    <string name="nav_group_contacts">Contactos</string>


    <!-- ACTION MENU -->
    <string name="action_settings">Definições</string>
    <string name="action_profile">Área Pessoal</string>
    <string name="action_login">Iniciar Sessão</string>
    <string name="action_logout">Terminar sessão</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Guardar</string>
    <string name="delete">Eliminar</string>
    <string name="add">Adicionar</string>


    <!-- DEFINIÇÕES -->
    <string name="settings_save_selected_group">Guardar grupo selecionado</string>
    <string name="settings_show_list_group_images">Mostrar imagens na lista de grupos</string>
    <string name="settings_exit_on_home_screen">Sair da aplicação no ecrã Notícias</string>


    <!-- OUTRAS ACTIVIDADES -->
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Lembrar</string>
    <string name="login_ok">Entrar</string>
    <string name="activity_noticias_image_description">Imagem</string>
    <string name="remove_selected_group">Remover Grupo Selecionado</string>


    <!-- ÁREA PESSOAL -->
    <string name="edit_groups">EDITAR GRUPOS</string>
    <string-array name="popup_group_actions">
        <item>Detalhes</item>
        <item>Historial</item>
        <item>Corpos gerentes</item>
        <item>Contactos</item>
    </string-array>


    <!-- ACTIVIDADE EDITARGRUPODETALHES -->
    <string name="towncity">Concelho:</string>
    <string name="district">Distrito:</string>
    <string name="shortname">Abreviatura:</string>
    <string name="complete_name">Nome completo:</string>


    <!-- ACTIVIDADE EDITARGRUPOINFO -->
    <string name="history">Historial:</string>
    <string name="staff">Corpos gerentes:</string>


    <!-- ATIVIDADE GRUPO CONTACTO -->
    <string name="edit_address">Morada:</string>
    <string name="edit_postcode">Código postal:</string>
    <string name="edit_website">Website:</string>
    <string name="edit_email">E-mail:</string>
    <string name="edit_phone">Telefone:</string>
    <string name="edit_mobilephone">Telemóvel:</string>
    <string name="edit_facebook">Facebook:</string>


    <!-- LISVIEW ITEM -->
    <string name="tittle">Título</string>
    <string name="date">Data</string>
    <string name="content">Conteúdo</string>


    <!-- ATIVIDADE GRUPO CONTACTO -->
    <string name="address">Morada</string>
    <string name="postcode">Código postal</string>
    <string name="website">Website</string>
    <string name="email">E-mail</string>
    <string name="phone">Telefone</string>
    <string name="mobilephone">Telemóvel</string>
    <string name="facebook">Facebook</string>


</resources>
