<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <ProgressBar
        android:id="@+id/loading_anim_item"
        style="@android:style/Widget.Material.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/layout_info_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titulo_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tittle"
            android:textSize="@dimen/listview_titulo_font"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/data_local_concelho"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="@dimen/listview_data_conteudo_font" />

        <ImageView
            android:id="@+id/imagem"
            android:layout_width="match_parent"
            android:layout_height="@dimen/imageview_height"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:contentDescription="@string/activity_noticias_image_description"
            app:srcCompat="@drawable/default_img" />

        <TextView
            android:id="@+id/conteudo_descricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content"
            android:textSize="@dimen/listview_data_conteudo_font" />
    </LinearLayout>

</LinearLayout>
