<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <ProgressBar
        android:id="@+id/loading_anim_editar_grupo_contacto"
        style="@android:style/Widget.Material.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/layout_editar_grupo_contactos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editText_morada"
            android:text="@string/edit_address"
            android:textSize="@dimen/listview_data_conteudo_font" />

        <EditText
            android:id="@+id/editText_morada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textSize="@dimen/listview_data_conteudo_font" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editText_codigopostal"
            android:text="@string/edit_postcode"
            android:textSize="@dimen/listview_data_conteudo_font" />

        <EditText
            android:id="@+id/editText_codigopostal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:textSize="@dimen/listview_data_conteudo_font" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editText_website"
            android:text="@string/edit_website"
            android:textSize="@dimen/listview_data_conteudo_font" />

        <EditText
            android:id="@+id/editText_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textSize="@dimen/listview_data_conteudo_font" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editText_email"
            android:text="@string/edit_email"
            android:textSize="@dimen/listview_data_conteudo_font" />

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/listview_data_conteudo_font" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editText_telefone"
            android:text="@string/edit_phone"
            android:textSize="@dimen/listview_data_conteudo_font" />

        <EditText
            android:id="@+id/editText_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textSize="@dimen/listview_data_conteudo_font" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editText_telemovel"
            android:text="@string/edit_mobilephone"
            android:textSize="@dimen/listview_data_conteudo_font" />

        <EditText
            android:id="@+id/editText_telemovel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textSize="@dimen/listview_data_conteudo_font" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editText_facebook"
            android:text="@string/edit_facebook"
            android:textSize="@dimen/listview_data_conteudo_font" />

        <EditText
            android:id="@+id/editText_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textSize="@dimen/listview_data_conteudo_font" />
    </LinearLayout>


</LinearLayout>
